2011-02-23 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.3
	* Proper LAM support 
	* Default Installation into the standard filesystem hierarchy

2011-02-22 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.2
	* Added MPI tests
	* Fixed detection of MPI path.

2011-02-15 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.1
	* Added OpenMP tests
	* Review of hooks
	* Added BSD mktemp compatiblity.	

2011-02-09 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.0
	* Brand new versioning: 1.0.0
	* Ready for EMI-1 

2011-02-03 Enol Fernández <enolfc _AT_ ifca.unican.es> - 0.1.8
	* Added the chmod +x to executable.

2011-01-27 Enol Fernandez <enolfc _AT_ ifca.unican.es> - 0.1.7
	* Changed default installation prefix (now it is /opt/mpi-start)
	* Added and reviewed tests for basic functionality, schedulers and hooks. 

2011-01-12 Enol Fernandez <enolfc _AT_ ifca.unican.es> - 0.1.6
	* Changed changelog format (now it includes version)
	* Added -V option to get version
	* Changed the verbosity options.

2011-01-11 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Added command line options
	* Added dummy scheduler in case none is found
	* Added condor scheduler

2010-11-29 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Added per node option.

2010-10-05 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Better packaging from makefile.

2010-09-04 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Make mpi-start runnable at MacOS.
	* Fixed typos in mpich/mpich2 modules.
	* Added automatic check for prefix in openmpi module.

2010-08-13 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Moved to mercurial
	* Lots of code cleanup
	* Changed versioning schema, now we are at 0.1.0

2010-03-18 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Code cleanup, fix in cptoshared.

2010-03-01 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Several fixes in the compiler flag substitution. 

2010-02-10 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* fixed the mpiexec file distribution
