@@ -580,124 +580,126 @@ print_version () {
     echo "mpi-start v@VERSION@" 
 }
 
-#======================================================================
-#  Parse the command line arguments and call the main function 
-#======================================================================
-export I2G_MPI_START=$0
-arguments="$*"
-while [ "x$1" != "x" ] ; do
-    case "$1" in 
-        -h)
-            print_usage
-            exit 0
-            ;;
-        -V)
-            print_version
-            exit 0
-            ;;
-        -t)
-            shift
-            export I2G_MPI_TYPE=$1
-            shift
-            ;;
-        -v)
-            export I2G_MPI_START_VERBOSE=1
-            shift
-            ;;
-        -vv)
-            export I2G_MPI_START_VERBOSE=1
-            export I2G_MPI_START_DEBUG=1
-            shift
-            ;;
-        -vvv)
-            export I2G_MPI_START_VERBOSE=1
-            export I2G_MPI_START_DEBUG=1
-            export I2G_MPI_START_TRACE=1
-            shift
-            ;;
-        -pre)
-            shift
-            export I2G_MPI_PRE_RUN_HOOK=$1
-            shift
-            ;;
-        -post)
-            shift
-            export I2G_MPI_POST_RUN_HOOK=$1
-            shift
-            ;;
-        -pcmd)
-            shift
-            export I2G_MPI_PRECOMMAND=$1
-            shift
-            ;;
-        -pnode)
-            export I2G_MPI_SINGLE_PROCESS=1
-            shift
-            ;;
-        -npnode)
-            shift
-            export I2G_MPI_PER_NODE=$1
-            shift
-            ;;
-        -np)
-            shift
-            export I2G_MPI_NP=$1
-            shift
-            ;;
-        -c)
-            shift
-            export I2G_MPI_CONFIG=$1
-            shift
-            ;;
-        -i)
-            shift
-            export I2G_MPI_APPLICATION_STDIN=$1
-            shift
-            ;;
-        -o)
-            shift
-            export I2G_MPI_APPLICATION_STDOUT=$1
-            shift
-            ;;
-        -e)
-            shift
-            export I2G_MPI_APPLICATION_STDERR=$1
-            shift
-            ;;
-        -x)
-            shift
-            if [[ $1 == *=* ]] ; then
-                mpi_start_export_variable `echo $1 | cut -f1 -d"="` `echo $1 | cut -f2- -d"="`
-            else
-                mpi_start_export_variable $1 
-            fi
-            shift
-            ;;
-        -d)
-            shift
-            eval export $1
-            shift
-            ;;
-        --)
-            shift
-            break
-            ;;
-        *)
-            if test "${1:0:1}" = "-" ; then
-                echo "Invalid option $1" 1>&2
-                echo 1>&2
+if test "$I2G_MPI_START_ENABLE_TESTING" != "TEST" ; then
+    #======================================================================
+    #  Parse the command line arguments and call the main function 
+    #======================================================================
+    export I2G_MPI_START=$0
+    arguments="$*"
+    while [ "x$1" != "x" ] ; do
+        case "$1" in 
+            -h)
                 print_usage
-                exit 1
-            fi
-            break
-            ;;
-    esac
-done
-if test "x$1" != "x" ; then
-    export I2G_MPI_APPLICATION=$1
-    shift
+                exit 0
+                ;;
+            -V)
+                print_version
+                exit 0
+                ;;
+            -t)
+                shift
+                export I2G_MPI_TYPE=$1
+                shift
+                ;;
+            -v)
+                export I2G_MPI_START_VERBOSE=1
+                shift
+                ;;
+            -vv)
+                export I2G_MPI_START_VERBOSE=1
+                export I2G_MPI_START_DEBUG=1
+                shift
+                ;;
+            -vvv)
+                export I2G_MPI_START_VERBOSE=1
+                export I2G_MPI_START_DEBUG=1
+                export I2G_MPI_START_TRACE=1
+                shift
+                ;;
+            -pre)
+                shift
+                export I2G_MPI_PRE_RUN_HOOK=$1
+                shift
+                ;;
+            -post)
+                shift
+                export I2G_MPI_POST_RUN_HOOK=$1
+                shift
+                ;;
+            -pcmd)
+                shift
+                export I2G_MPI_PRECOMMAND=$1
+                shift
+                ;;
+            -pnode)
+                export I2G_MPI_SINGLE_PROCESS=1
+                shift
+                ;;
+            -npnode)
+                shift
+                export I2G_MPI_PER_NODE=$1
+                shift
+                ;;
+            -np)
+                shift
+                export I2G_MPI_NP=$1
+                shift
+                ;;
+            -c)
+                shift
+                export I2G_MPI_CONFIG=$1
+                shift
+                ;;
+            -i)
+                shift
+                export I2G_MPI_APPLICATION_STDIN=$1
+                shift
+                ;;
+            -o)
+                shift
+                export I2G_MPI_APPLICATION_STDOUT=$1
+                shift
+                ;;
+            -e)
+                shift
+                export I2G_MPI_APPLICATION_STDERR=$1
+                shift
+                ;;
+            -x)
+                shift
+                if [[ $1 == *=* ]] ; then
+                    mpi_start_export_variable `echo $1 | cut -f1 -d"="` `echo $1 | cut -f2- -d"="`
+                else
+                    mpi_start_export_variable $1 
+                fi
+                shift
+                ;;
+            -d)
+                shift
+                eval export $1
+                shift
+                ;;
+            --)
+                shift
+                break
+                ;;
+            *)
+                if test "${1:0:1}" = "-" ; then
+                    echo "Invalid option $1" 1>&2
+                    echo 1>&2
+                    print_usage
+                    exit 1
+                fi
+                break
+                ;;
+        esac
+    done
+    if test "x$1" != "x" ; then
+        export I2G_MPI_APPLICATION=$1
+        shift
+    fi
+    if test "x$*" != "x" ; then
+        export I2G_MPI_APPLICATION_ARGS="$*"
+    fi
+    main "$arguments"
 fi
-if test "x$*" != "x" ; then
-    export I2G_MPI_APPLICATION_ARGS="$*"
-fi
-main "$arguments"
