@@ -1,3 +1,7 @@
+2011-02-23 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.4
+	* Fixed bug #29. 
+	* Added unit testing for mpi-start main source code. 
+
 2011-02-23 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.3
 	* Proper LAM support 
 	* Default Installation into the standard filesystem hierarchy
